<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.FeedFragment">


    <RelativeLayout
        android:id="@+id/system_bar_"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@drawable/system_bar_"
        android:clipToOutline="true"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/rectangle_7"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toStartOf="@id/rectangle_2"
        app:layout_constraintTop_toTopOf="@id/system_bar_"
        tools:ignore="MissingConstraints"

        />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintEnd_toStartOf="@id/triangle"
        app:layout_constraintTop_toTopOf="@id/system_bar_"
        tools:ignore="MissingConstraints"

        />


    <View
        android:id="@+id/triangle"
        android:layout_width="12dp"
        android:layout_height="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/triangle"
        app:layout_constraintEnd_toEndOf="@id/system_bar_"
        app:layout_constraintTop_toTopOf="@id/system_bar_"
        tools:ignore="MissingConstraints" />


    <RelativeLayout
        android:id="@+id/app_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/ic_app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/system_bar_"
        app:layout_constraintTop_toBottomOf="@id/system_bar_"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/vector_1"
        android:layout_width="22dp"
        android:layout_height="17.98dp"
        android:layout_marginTop="19.01dp"
        android:layout_marginEnd="19.01dp"
        android:layout_marginBottom="19.01dp"
        android:background="@drawable/ic_vector__1_"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_bar_bg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/page_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="16.5dp"
        android:gravity="top"
        android:text="@string/page_title_1"
        android:textAppearance="@style/page_title_1"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="312dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_back"
        tools:ignore="MissingConstraints" />

     <RelativeLayout
        android:id="@+id/link"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/ic_link"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/github_com_"
        android:layout_width="288dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/github_com_"
        android:textAppearance="@style/github_com_"
        android:translationY="-1.88sp"
        app:layout_constraintStart_toEndOf="@id/link"
        app:layout_constraintTop_toTopOf="@id/link" />

    <View
        android:id="@+id/group"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/ic_group__1_"
        app:layout_constraintStart_toStartOf="@id/link"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/license"
        android:layout_width="56dp"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2.5dp"
        android:gravity="center_vertical"
        android:text="@string/license"
        android:textAppearance="@style/license"
        app:layout_constraintStart_toEndOf="@id/group"
        app:layout_constraintTop_toTopOf="@id/group" />

    <TextView
        android:id="@+id/veb_ser"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_marginStart="246dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical"
        android:text="@string/veb_ser"
        android:textAppearance="@style/veb_ser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/license" />

    <View
        android:id="@+id/star"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="28.87dp"
        android:background="@drawable/ic_baseline_star_24"
        app:layout_constraintStart_toStartOf="@id/group"
        app:layout_constraintTop_toBottomOf="@id/group" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:layout_marginStart="6dp"
        android:gravity="center_vertical"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        app:layout_constraintStart_toEndOf="@id/star"
        app:layout_constraintTop_toTopOf="@id/star" />

    <TextView
        android:id="@+id/stars"
        android:layout_width="36dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:text="@string/stars"
        android:textAppearance="@style/stars"
        app:layout_constraintStart_toEndOf="@id/some_id"
        app:layout_constraintTop_toTopOf="@id/some_id" />

    <View
        android:id="@+id/fork"
        android:layout_width="17.14dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/fork"
        app:layout_constraintStart_toEndOf="@id/stars"
        app:layout_constraintTop_toTopOf="@id/stars" />

    <TextView
        android:id="@+id/some_id_1"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="7.86dp"
        android:gravity="center_vertical"
        android:text="@string/some_id_1"
        android:textAppearance="@style/some_id_1"
        app:layout_constraintStart_toEndOf="@id/fork"
        app:layout_constraintTop_toTopOf="@id/some_id" />

    <TextView
        android:id="@+id/forks"
        android:layout_width="37dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:text="@string/forks"
        android:textAppearance="@style/forks"
        app:layout_constraintStart_toEndOf="@id/some_id_1"
        app:layout_constraintTop_toTopOf="@id/stars" />

    <View
        android:id="@+id/visible"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/ic_baseline_visibility_24"
        app:layout_constraintStart_toEndOf="@id/forks"
        app:layout_constraintTop_toTopOf="@id/star" />

    <TextView
        android:id="@+id/some_id_2"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:text="@string/some_id_2"
        android:textAppearance="@style/some_id_2"
        app:layout_constraintStart_toEndOf="@id/visible"
        app:layout_constraintTop_toTopOf="@id/some_id_1" />

    <TextView
        android:id="@+id/watchers"
        android:layout_width="66dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/forks"
        app:layout_constraintStart_toEndOf="@id/some_id_2"
        android:text="@string/watchers"
        android:textAppearance="@style/watchers"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/mobile_kotl"
        android:layout_width="344dp"
        android:layout_height="27dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mobile_kotl"
        android:textAppearance="@style/mobile_kotl"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/this_is_a_k"
        android:layout_width="344dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="283dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/this_is_a_k"
        android:textAppearance="@style/this_is_a_k"
        android:gravity="top"
        android:alpha="0.7"
        />


    <TextView
        android:id="@+id/features"
        android:layout_width="344dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/this_is_a_k"
        android:text="@string/features"
        android:textAppearance="@style/features"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/strings_plu"
        android:layout_width="344dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="418dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/strings_plu"
        android:textAppearance="@style/strings_plu"
        android:gravity="top"
        android:alpha="0.7"
        />


    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/navbar"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/oval"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="171.81dp"
        android:layout_marginEnd="172.56dp"
        android:layout_marginBottom="13.83dp"
        android:background="@drawable/ic_baseline_radio_button_checked_24"
        app:layout_constraintBottom_toBottomOf="@id/navbar"
        app:layout_constraintEnd_toEndOf="@id/navbar"
        app:layout_constraintStart_toStartOf="@id/navbar"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="11.5dp"
        android:layout_height="11.37dp"
        android:layout_marginStart="273.91dp"
        android:layout_marginBottom="15.6dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="@id/navbar"
        app:layout_constraintEnd_toEndOf="@id/navbar"
        app:layout_constraintStart_toStartOf="@id/navbar"
        app:layout_goneMarginTop="15.6dp"

        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/triangle_1"
        android:layout_width="11.45dp"
        android:layout_height="10.38dp"
        android:layout_marginStart="75.58dp"
        android:layout_marginBottom="15.6dp"
        android:background="@drawable/triangle_1"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@id/navbar"
        app:layout_constraintStart_toStartOf="@id/navbar"
        app:layout_goneMarginTop="15.6dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>